style.css
* {
    margin: 0;
    padding: 0;
    text-decoration: none;
    box-sizing: border-box;
    outline: none;
    border: none;
}

:root {
    --bgColor: black;
    --textColor: #FFFFFF;
    --second: #FF3737; 
}

body {
    background-color: var(--bgColor);
    color: var(--textColor);
    width: 100%;
    height: 100vh;
    overflow-x: hidden;
}

/* Header Section */
header {
    width: 100%;
    padding: 1rem;
    background-color: transparent;
    position: fixed;
    top: 0;
    left: 0;
    display: flex;
    justify-content: space-between;
    align-items: center;
    backdrop-filter: blur(10px);
}

.logo {
    color: var(--second);
    font-size: 2rem;
    font-weight: 800;
    cursor: pointer;
    transition: 0.5s ease;
}

.logo:hover {
    transform: scale(1.1);
}

nav a {
    margin-right: 4rem;
    font-size: 1.2rem;
    color: white;
    font-weight: 500;
    transition: 0.3s ease;
}

nav a:hover {
    color: var(--second);
    border-bottom: 3px solid var(--second);
}

.hamburger {
    display: none;
}

@media (max-width: 800px) {
    nav {
        background-color: var(--bgColor);
        display: none;
        flex-direction: column;
        position: absolute;
        height: 100vh;
        width: 250px;
        top: 0;
        right: 0;
        box-shadow: 0 10px 10px rgba(0, 0, 0, 0.5);
    }

    nav a {
        font-size: 1rem;
        padding: 20px;
    }

    #homelink {
        margin-top: 6rem;
    }


    .hamburger {
        display: block;
        z-index: 999;
        font-size: 3rem;
        cursor: pointer;

    }

    nav.active{
        display: flex;
    }
}



/* Body Section 1 */

.section-card {
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 5rem 10% 1rem 10%;
    gap: 5rem;
    margin-top: 20px;
}

.main-img img {
    width: 30vw;
    border-radius: 50%;
    box-shadow: 0 0 25px solid var(--second);
    transition: 0.2 linear;
}

.main-content {
   display: flex;
   flex-direction: column;
   gap: 1rem;
}

.main-content span{
    color: var(--second);    
}

.main-icon {
    margin-top: 20px;
}

.main-icon a{
    padding: 0.5rem;
    color: white;
    font-size: 2rem;
    border: 0.1rem solid var(--second);
    border-radius: 50%;

}

.hire-me {
    width: 9rem;
    display: inline-flex;
    align-items: center;
    font-weight: 600;
    justify-content: center;
    font-size: 1rem;
    color: var(--second);
    margin-top: 1rem;
    border: 1px solid var(--second);
    padding: 0.8rem 2rem;
    border-radius: 50px;
    transition: 0.5s ease;
}

.hire-me:hover {
    transform: scale(1.1);
}

@media (max-width: 1000px) {
    /* Section 1 */
    .section-card {
        flex-direction: column;
        gap: 4rem;
    }
    
    .main-img {
        width: 300px;
        max-width: 300px;
        aspect-ratio: 1 / 1;
    }

    .main-img img {
        width: 100%;
        height: 100%;
        object-fit: cover;
    }
    
}

/* Section Skill 2 */

.section-skill {
    background-color: var(--bgColor);
    display: flex;
    align-items: center;
    flex-direction: column;
    margin-top: 4rem;
}

.section-skill span {
    color: var(--second);
    border: 1px solid var(--textColor);
    padding: 10px 10px 10px 5px;
    border-radius: 10px;
}

.skill-box {
    width: 100%;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
    align-items: center;
    justify-items: center;
    justify-content: center;
    height: 60vh;
}

.skill-info {
    width: 120px;
    height: 200px;
    border: 0.2rem solid var(--second);
    font-size: 3rem;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    gap: 2rem;
    border-radius: 15px;
    transition: 0.5s ease-out;
    
}

.skill-info:hover {
    transform: scale(1.2);
}

.skill-info p {
    font-size: 1.5rem;
}

@media (max-width: 1000px) {
    .skill-box {
        grid-template-columns: 40% 40%;
        margin-top: 5rem;
        justify-items: center;
        gap: 1.5rem;
        
    }
}

/* Section 3 Project Box */

.project-box {
    width: 100vw;
    padding: 2rem;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

.project-box h2 {
    font-size: 2rem;
    border-bottom: 0.5rem solid var(--second);
    border-radius: 20%;
    margin-bottom: 3rem;
}

.project-main {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 3rem;
}

.project-info {
    width: 25%;
    border: 2px solid var(--textColor);
    border-radius: 5%;
    padding: 10px;
    transition: 1.5s ease-out;
}

.project-info:hover {
    transform: scale(1.2);
}

.project-info img {
    width: 100%;
    aspect-ratio: 3 / 2;
    border-radius: 5%;
    margin-bottom: 10px;
}

@media (max-width: 1000px) {
    .project-main {
        flex-direction: column;
    }
    .project-box {
        height: 70rem;
        margin-top: 7rem;
    }
    .project-info {
        width: 90%;
    }
}

/* footer */

footer {
    width: 100vw;
    padding: 0.5rem;
    display: flex;
    justify-content: center;
    align-items: center;
    border-top: 1px solid var(--textColor);
    margin-top: 1rem;
}

